ajuste de testes com erro