@@ -25,7 +25,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Optional;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -249,7 +249,7 @@ public class BookControllerTest {
                 .build();
 
         BDDMockito.given( service.find(Mockito.any(Book.class), Mockito.any(Pageable.class)))
-                .willReturn(new PageImpl<>(List.of(book), PageRequest.of(0, 100), 1));
+                .willReturn(new PageImpl<>(Arrays.asList(book), PageRequest.of(0, 100), 1));
 
 
         String queryString = String.format("?title=%s&author=%s&page=0&size=100",
